# ai-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: agent.py  router.py  tools.py
app/api/: routes.py
app/core/: config.py  databricks.py  streaming.py
app/evaluation/: datasets.py  evaluator.py  mlflow_logger.py
app/fallback/: pgvector_store.py
app/rag/: chunking.py  embeddings.py  retriever.py
app/security/: auth.py
app/ui/: dashboard.html  index.html  templates.py
data/: mock_jira.json
deployment/ecs/: task-definition.json
legal/: PROPRIETARY-NOTICE.md
scripts/: evaluate.py  ingest.py
